--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,32 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Sign In</h1>
+
+<div class="col-3">
+
+    <form method = "post">
+        
+        <div class="mb-3">
+        <label class="form-label">UserName</label>
+        <input type="text" class="form-control" asp-for="User.Username"/>
+        </div>
+        
+        <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="text" class="form-control" asp-for="User.Password"/>
+        </div>
+
+        <div class="mb-3">
+        <button type="submit" class="btn btn-primary col-md-4">Sing in</button>
+        </div>
+        
+        <div class="mb-3">
+        <label class=text-black>New User</label>
+        <br>
+        <button type="submit" class="btn btn-secondary">Sing up</button>
+        </div>
+
+    </form>
 </div>
+
