Navigation updated. Visual fixes on forms.

--- a/Pages/SignUp.cshtml
+++ b/Pages/SignUp.cshtml
@@ -41,7 +41,7 @@
     </div>
 
     <div class="mb-3">  
-        <button class="btn btn-secondary">Cancel</button>
+        <button class="btn btn-secondary col-md-4">Cancel</button>
     </div>
 
 </form>
