--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,7 @@
     <form method = "post">
         
         <div class="mb-3">
-        <label class="form-label">UserName</label>
+        <label class="form-label">Username</label>
         <input type="text" class="form-control" asp-for="User.Username"/>
         </div>
         
@@ -21,13 +21,11 @@
         </div>
 
         <div class="mb-3">
-        <button type="submit" class="btn btn-primary col-md-4">Sing in</button>
+        <button type="submit" class="btn btn-primary col-md-4">Sign In</button>
         </div>
-        
+  
         <div class="mb-3">
-        <label class=text-black>New User</label>
-        <br>
-        <button type="submit" class="btn btn-secondary">Sing up</button>
+        <button type="submit" class="btn btn-secondary col-md-4">Sign Up</button>
         </div>
 
     </form>
